--- a/src/components/About.css
+++ b/src/components/About.css
@@ -15,6 +15,7 @@
   width: 100%;
   padding: 0 20px;
   margin-top: 40px;
+  opacity: 1;
 }
 
 .about-content {
@@ -22,6 +23,7 @@
   flex-direction: column;
   width: 100%;
   gap: 60px;
+  opacity: 1;
 }
 
 .about-header {
